cosmetic fixes dash admin

--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,15 @@ input[type="number"] {
 .bottom-nav {
   background-color: #2D6A4F;
 }
+.saidas {
+  margin-left: 20px;
+}
+.ff3131 {
+  color: #ff3131;
+}
+.ffde59 {
+  color: #ff751f;
+}
+.nome-da-empresa {
+  font-size: 32px;
+}
